--- a/src/assets/sass/Classroom/NewClassroom.scss
+++ b/src/assets/sass/Classroom/NewClassroom.scss
@@ -184,10 +184,10 @@
         }
     }
     .textbook-content-view{
+        background-color: $colorFF;
         color:$grey90;
-        width:calc(100vw - 104px);
-        max-height:calc(100vh - 212px);
-        margin-right:104px;
+        width:calc(100vw - 15px);
+        max-height:calc(100vh - 100px);
         padding: 57px;
         font-size:16px;
         overflow: scroll;
