--- a/src/assets/sass/Classroom/NewClassroom.scss
+++ b/src/assets/sass/Classroom/NewClassroom.scss
@@ -227,6 +227,7 @@
             .body-buttonGroup {
                 display: flex;
                 flex-direction: row;
+                align-items: center;
             }
 
 
