--- a/src/assets/sass/Classroom/NewClassroom.scss
+++ b/src/assets/sass/Classroom/NewClassroom.scss
@@ -184,7 +184,7 @@
         }
     }
     .textbook-content-view{
-        background-color: $colorFF;
+        background-color: $grey10;
         color:$grey90;
         width:calc(100vw - 15px);
         max-height:calc(100vh - 100px);
