--- a/src/assets/sass/Classroom/NewClassroom.scss
+++ b/src/assets/sass/Classroom/NewClassroom.scss
@@ -8,6 +8,7 @@
         background-color: $tb;
         color: $colorFF;
         display: flex;
+        justify-content: space-between;
         align-items: center;
         padding:16px;
         >.textbook-sidebar-toggle{
