--- a/src/assets/sass/Curriculum/TextbookSidebar.scss
+++ b/src/assets/sass/Curriculum/TextbookSidebar.scss
@@ -3,11 +3,12 @@
 
 .textbook-sidebar{
     width: 400px;
+    padding-bottom: 20px;
     background-color: $colorFF;
-    box-shadow: 0px 4px 10px #00000019;
+    box-shadow: 0 4px 10px #00000019;
     position: absolute;
     height:calc(100vh - 7vh);
-    left: 0%;
+    left: 0;
     transition: left 0.6s ease;
     z-index:999;
     overflow-y: scroll;
